--- a/bookworm-api/package.json
+++ b/bookworm-api/package.json
@@ -4,14 +4,27 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --exec babel-node -- src/index.js"
+    "start": "nodemon --exec babel-node -- src/index.js",
+    "debug": "nodemon --exec babel-node -- --inspect src/index.js"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "prettier": "^1.6.1"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.5.1",
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.2.8",
+    "mongoose-unique-validator": "^2.0.1",
+    "nodemailer": "^4.6.8",
+    "request-promise": "^4.2.2",
+    "xml2js": "^0.4.19"
   }
 }
